image distortion fix on thumbnails and style selector images

--- a/components/Description-Scott/StyleSelector/StyleSelector.module.css
+++ b/components/Description-Scott/StyleSelector/StyleSelector.module.css
@@ -1,6 +1,8 @@
 .selectedThumbnail {
   border-style: double;
   border-color: black;
+  max-height: 100%;
+  object-fit: cover;
   cursor: pointer;
 }
 
